# platform

./: Makefile  docker-compose.yml
.github/workflows/: push-to-develop.yml  push-to-master.yml
api/: Cargo.toml  Dockerfile  service.yml
api/src/: auth.rs  context.rs  main.rs  mutation.rs  query.rs  user.rs
db/migrations/: 001-setup-users-table.sql
