[package]
name = "api"
version = "0.1.0"
authors = ["Emil Broman <emil@emilbroman.me>"]
edition = "2018"

[dependencies]
juniper = { git = "https://github.com/graphql-rust/juniper.git" }
juniper_rocket_async = { git = "https://github.com/graphql-rust/juniper.git" }
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "async" }
log = "0.4.8"
uuid = { version = "^0.8", features = ["v4", "serde"] }
sha2 = "0.8"
bb8-postgres = "0.4.0"
tokio-postgres = { version = "0.5.4", features = ["with-uuid-0_8"] }
futures = "0.3.5"
tokio = { version="0.2", features = ["rt-threaded", "sync", "macros"] }
